--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,19 @@
 aiofiles==0.6.0
+certifi==2020.12.5
 click==7.1.2
 fastapi==0.63.0
 h11==0.12.0
+httpcore==0.13.2
 httptools==0.1.2
+httpx==0.18.1
+idna==3.1
 Jinja2==2.11.3
 MarkupSafe==1.1.1
 pydantic==1.8.1
 python-dotenv==0.17.0
 PyYAML==5.4.1
+rfc3986==1.4.0
+sniffio==1.2.0
 starlette==0.13.6
 typing-extensions==3.7.4.3
 uvicorn==0.13.4
